--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,11 @@ section h3.section-subheading {
   padding: 20px 40px;
 }
 
+.btn-l {
+  margin:5px;
+  padding: 10px 20px;
+}
+
 .btn-primary {
   background-color: #fed136;
   border-color: #fed136;
@@ -216,6 +221,9 @@ header.masthead .intro-text .intro-heading {
   }
 }
 
+.pad20 {
+  padding: 20px;
+}
 .service-heading {
   margin: 15px 0;
   text-transform: none;
