--- a/css/main.css
+++ b/css/main.css
@@ -242,6 +242,17 @@ header.masthead .intro-text .intro-heading {
   align-items: center;
 }
 
+.wine-example{
+  width: 6em;
+  height: 17em;
+  margin-bottom: 20px;
+}
+
+.wine-price-comparison li{
+  font-size: 1.2em;
+  padding-bottom: 5px;
+}
+
 .service-heading {
   margin: 15px 0;
   text-transform: none;
