--- a/css/main.css
+++ b/css/main.css
@@ -272,6 +272,36 @@ header.masthead .intro-text .intro-heading {
   padding-bottom: 5px;
 }
 
+
+
+#robinthesommelier {
+  position:relative;
+  margin-top: 20px;
+}
+
+#robinthesommelier button {
+  margin: 20px;
+}
+.robin img { 
+	border:1px solid #000;
+	margin:3px;
+	float:left;
+}
+.robin span { 
+	position:absolute;
+	visibility:hidden;
+}
+.robin:hover, .robin:hover span { 
+	visibility:visible;
+  top:-200px;
+  left: 100px;
+	z-index:1;
+}
+
+
+
+
+
 .service-heading {
   margin: 15px 0;
   text-transform: none;
